--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,26 +1,31 @@
-<div class='flex justify-center mb-6'>
-  <div class=" col-md-10 col-lg-8">
-    <div class= "mt-15 mb-10 font-bold text-center text-3xl text-yellow-900">
-      ポスト作成
+<div class= "mt-15 mb-10 font-bold text-center text-3xl text-yellow-900">
+  ポスト作成
+</div>
+
+<%= render 'shared/flash_messages' %>
+
+<div class="container mx-auto px-6 py-15 my-15 bg-white rounded-xl min-h-screen max-w-screen-lg">
+  <%= form_with model: @post, class: "new_post" do |f| %>
+      <div class="grid grid-cols-2 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 justify-items-center">
+      <div>
+        <p class= "text-yellow-950 text-center">↓　ここに画像が入ります　↓</p>
+        <%= image_tag "no_image.png", width: 350, height: 350, class:"rounded-xl transition duration-300 group-hover:scale-105" %>
+        <%= f.label :image, class: "text-yellow-950" %>
+        <%= f.file_field :image, class: "shadow appearance-none border-2 border-yellow-950 rounded w-full py-1 px-2 text-yellow-950 leading-tight focus:outline-none focus:shadow-outline cursor-pointer" %>
+      </div>
+      <div class="ml-8 mr-8 col-span-1 justify-self-start">
+        <div class="mb-3 flex flex-col">
+          <%= f.label :title %>
+          <%= f.text_field :title, class: "w-96 bg-stone-50 border border-stone-950 rounded-md" %>
+        </div>
+        <div class="mb-3 flex flex-col">
+          <%= f.label :body %>
+          <%= f.text_area :body, class: "w-96 bg-stone-50 border border-stone-950 rounded-md", rows: "15" %>
+        </div>
+      </div>
     </div>
-    <div class= "flex-col">
-    <%= form_with model: @post, class: "new_post" do |f| %>
-      <%= render 'shared/object_error_messages', object: f.object %>
-      <div class="mb-3 flex flex-col">
-        <%= f.label :title %>
-        <%= f.text_field :title, class: "w-96 bg-stone-50 border border-stone-950 rounded-md" %>
-      </div>
-      <div class="mb-3 flex flex-col">
-        <%= f.label :body %>
-        <%= f.text_area :body, class: "w-96 bg-stone-50 border border-stone-950 rounded-md", rows: "10" %>
-      </div>
-      <div class="mb-3 flex flex-col">
-        <%= f.label :image %>
-        <%= f.file_field :image, class: "shadow appearance-none border-2 border-blue rounded w-full md:py-2 py-1 md:px-3 px-2 text-black leading-tight focus:outline-none focus:shadow-outline cursor-pointer" %>
-      <div class="actions flex justify-center">
-        <%= f.submit nil, class: "mt-4 w-44 rounded-md bg-yellow-900 p-3 text-white focus:outline-none cursor-pointer" %>
-      </div>
-    <% end %>
+    <div class="actions flex justify-center">
+       <%= f.submit nil, class: "mt-4 w-44 rounded-md bg-yellow-900 p-3 text-white focus:outline-none cursor-pointer" %>
     </div>
-  </div>
+  <% end %>
 </div>
