--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,31 +1,29 @@
-<%= render 'shared/flash_messages' %>
-<div class="container mx-auto px-6 md:px-10 py-8 my-8 md:bg-white rounded-xl min-h-screen max-w-screen-lg">
-  <div class="flex flex-col items-center overflow-hidden md:flex-row">
-    <a class="group relative block shrink-0 self-start overflow-hidden">
+<%= render "shared/flash_messages" %>
+<div class="container mx-auto px-6 py-15 my-15 bg-white rounded-xl min-h-screen max-w-screen-lg">
+      <div class="grid grid-cols-2 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 justify-items-center">
+    <div>
       <% if @post.image.attached? %>
-        <div class="flex flex-wrap justify-items-start items-center">
-          <%= image_tag(@post.image.variant(resize_to_fill: [350, 350]), class:"rounded-xl") %>
-        </div>
+        <%= image_tag(@post.image.variant(resize_to_fill: [350, 350]), class:"rounded-xl") %>
       <% end %>
-    </a>
-  <div class="flex flex-col gap-2 lg:p-10">
-    <span class="text-sm text-gray-400"><%= l @post.created_at %></span>
-    <h2 class="text-xl font-bold text-gray-800">
-      <%= @post.title %>
-    </h2>
-    <div class= "col-span-2 row-span-2 text-yellow-950 whitespace-pre-wrap">
-      <%= @post.body %>
+    </div>
+    <div class="pr-15 col-span-1 justify-self-start">
+      <span class="text-sm text-gray-400"><%= l @post.created_at %></span>
+      <h2 class="text-2xl font-bold text-gray-800">
+        <%= @post.title %>
+      </h2>
+      <div class= "mt-10 text-yellow-950">
+        <%= @post.body %>
+      </div>
     </div>
   </div>
-</div>
-<% if @post.user == current_user %>
-  <div class= "flex flex-col">
-    <div class= "mt-10 text-yellow-950">
-      <%= link_to "編集する", edit_post_path(@post), class: "focus:outline-none cursor-pointer" %>
+  <% if @post.user == current_user %>
+    <div class= "flex flex-col">
+      <div class= "mt-10 text-yellow-950">
+        <%= link_to "編集する", edit_post_path(@post), class: "focus:outline-none cursor-pointer" %>
+      </div>
+      <div class= "mt-4 text-yellow-950">
+        <%= link_to "削除する", post_path(@post), class: "focus:outline-none cursor-pointer", data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" } %>
+      </div>
     </div>
-    <div class= "mt-4 text-yellow-950">
-      <%= link_to "削除する", post_path(@post), class: "focus:outline-none cursor-pointer", data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" } %>
-    </div>
-  </div>
-<% end %>
+  <% end %>
 </div>
