--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -13,27 +13,26 @@
           <p class= "text-yellow-950">現在の画像:</p>
           <%= image_tag (@post.image.variant(resize_to_fill: [350, 350])) %>
         <% end %>
-        <div class="mt-5">
+        <div class="mt-6">
           <%= f.label :image, class: "text-yellow-950" %>
           <%= f.file_field :image, class: "shadow appearance-none border-2 border-yellow-950 rounded w-full py-1 px-2 text-yellow-950 leading-tight focus:outline-none focus:shadow-outline cursor-pointer" %>
         </div>
       </div>
       <div class="ml-8 mr-8 col-span-1 justify-self-start">
-        <div class= "mb-6 flex flex-col">
+        <div class= "mb-3 flex flex-col">
           <%= f.label :title, class: "text-yellow-950" %>
-          <%= f.text_field :title, class: "w-96 bg-stone-50 border border-yellow-950 rounded-md" %>
+          <%= f.text_field :title, class: "w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md" %>
         </div>
         <div class="mb-3 flex flex-col">
           <%= f.label :body, class: "text-yellow-950" %>
-          <%= f.text_area :body, class: "w-96 bg-stone-50 border border-yellow-950 rounded-md", rows: "15" %>
+          <%= f.text_area :body, class: "w-96 bg-stone-50 border border-yellow-950 rounded-md", rows: "12" %>
+        </div>
+        <div class="mb-3 flex flex-col">
+          <%= f.label :tag_names, class: "text-yellow-950" %>
+          <%= f.text_field :tag_names, value: f.object.tag_names, class: 'w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md', placeholder: '  ,で区切って入力してください' %>
         </div>
       </div>
     </div>
-    <div class="mb-3 flex justify-center">
-      <div class="mb-3 flex flex-col">
-        <%= f.label :tag_names %>
-        <%= f.text_field :tag_names, value: f.object.tag_names, class: 'w-96 bg-stone-50 border border-stone-950 rounded-md', placeholder: '  ,で区切って入力してください' %>
-      </div>
     </div>
     <div class="actions flex justify-center">
       <%= f.submit nil, class: "mt-4 w-44 rounded-md bg-yellow-900 p-3 text-white focus:outline-none cursor-pointer" %>
