--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,7 +7,9 @@
       <% end %>
     </div>
     <div class="pr-15 col-span-1 justify-self-start">
-      <span class="text-sm text-gray-400"><%= l @post.created_at %></span>
+      <div class="text-sm text-gray-400">
+        <%= l @post.created_at %>
+      </div>
       <h2 class="text-2xl font-bold text-gray-800">
         <%= @post.title %>
       </h2>
@@ -23,14 +25,20 @@
       </div>
     </div>
   </div>
+  <div class="mt-10 container mx-auto h-100 w-210 rounded-xl bg-gray-300">
+    <div class="flex items-center justify-center">地図</div>
+  </div>
   <% if @post.user == current_user %>
-    <div class= "flex flex-col">
-      <div class= "mt-10 text-yellow-950">
+    <div class="flex justify-center items-center">
+      <div class= "m-10 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5 hover:bg-yellow-700">
         <%= link_to "編集する", edit_post_path(@post), class: "focus:outline-none cursor-pointer" %>
       </div>
-      <div class= "mt-4 text-yellow-950">
+      <div class= "m-10 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5 hover:bg-yellow-700">
         <%= link_to "削除する", post_path(@post), class: "focus:outline-none cursor-pointer", data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" } %>
       </div>
     </div>
   <% end %>
+  <div class="flex items-center justify-center">
+    <div class="border-b border-yellow-950 w-370"></div>
+  </div>
 </div>
