--- a/app/views/users/my_posts.html.erb
+++ b/app/views/users/my_posts.html.erb
@@ -1,6 +1,21 @@
 <div class= "mt-15 mb-10 font-bold text-center text-3xl text-yellow-900">
   <%= @user.name %>の投稿
 </div>
+<div class='flex justify-center mb-6'>
+<%= month_calendar(events: @calendar_posts, attribute: :created_at, class: "w-full table-fixed border border-gray-800 text-sm") do |date, posts| %>
+  <div class="w-15 h-15 p-1 bg-white border border-yellow-800">
+    <div class="flex flex-col space-y-1">
+      <div class="text-sm text-yellow-900 text-center"><%= date.day %></div>
+      <% posts_for_date = posts.select { |post| post.created_at.to_date == date } %>
+        <% if posts_for_date.any? %>
+          <div class="text-sm text-center">
+            <%= link_to "#{posts_for_date.count}件", my_posts_user_path(current_user, date: date),class:"font-bold text-yellow-900 hover:text-yellow-600" %>
+          </div>
+        <% end %>
+    </div>
+  </div>
+<% end %>
+</div>
 <%= render "posts/search_form", q: @q, url: my_posts_user_path(current_user) %>
 <% if @posts.present? %>
   <div class="mt-15 max-w-screen-xl mx-auto">
@@ -14,16 +29,3 @@
 <% else %>
   <div class="mb-3 text-center">掲示板がありません</div>
 <% end %>
-<div class='flex justify-center mb-6'>
-<%= month_calendar(events: @calendar_posts, attribute: :created_at, class: "w-full table-fixed border border-gray-800 text-sm") do |date, posts| %>
-  <div class="w-30 h-24 p-1 border border-yellow-800">
-    <div class="flex flex-col space-y-1">
-      <div class="text-sm text-center"><%= date.day %></div>
-      <% posts_for_date = posts.select { |post| post.created_at.to_date == date } %>
-       <% if posts_for_date.any? %>
-        <%= link_to "#{posts_for_date.count}件", my_posts_user_path(current_user, date: date) %>
-      <% end %>
-    </div>
-  </div>
-<% end %>
-</div>
