--- a/app/views/users/my_posts.html.erb
+++ b/app/views/users/my_posts.html.erb
@@ -4,8 +4,8 @@
 <div class='flex justify-center mb-6'>
 <%= month_calendar(events: @calendar_posts, attribute: :created_at, class: "w-full table-fixed border border-gray-800 text-sm") do |date, posts| %>
   <div class="w-15 h-15 p-1 bg-white border border-yellow-800">
-    <div class="flex flex-col space-y-1">
-      <div class="text-sm text-yellow-900 text-center"><%= date.day %></div>
+    <div class="flex flex-col">
+      <div class="m-1 text-sm text-yellow-900 text-center"><%= date.day %></div>
       <% posts_for_date = posts.select { |post| post.created_at.to_date == date } %>
         <% if posts_for_date.any? %>
           <div class="text-sm text-center">
