edit:カレンダーCSS

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -47,3 +47,73 @@
   border-style: none;
   background-color: #f3f4f6;
 }
+
+.simple-calendar {
+  table {
+    -webkit-border-horizontal-spacing: px;
+    -webkit-border-vertical-spacing: 0px;
+    background-color: rgba(255, 255, 255, 0);
+    border: 1px solid var(--color-yellow-950);
+    border-collapse: collapse;
+    box-sizing: border-box;
+  }
+
+  tr {
+    border-collapse: collapse;
+  }
+
+  th {
+    width: 50px;
+    padding: 5px;
+    border-bottom: 2px solid var(--color-yellow-950);
+    border-collapse: collapse;
+    border-left: 1px solid var(--color-yellow-950);
+    border-right: 1px solid var(--color-yellow-950);
+    box-sizing: border-box;
+    text-align: center;
+    background: #ffffff;
+    color: var(--color-yellow-900);
+  }
+
+  td {
+    padding: 5px;
+    vertical-align: top;
+
+
+    border: 1px solid #ffffff;
+    border-top-color: var(--color-yellow-950);
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-right-color: var(--color-yellow-950);
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-bottom-color: var(--color-yellow-950);
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-left-color: var(--color-yellow-950);
+    border-left-style: solid;
+    border-left-width: 1px;
+  }
+
+  .day {
+    height: 50px;
+    background: #ffffff;
+  }
+
+  .today {
+    background: #ffffc0;
+  }
+
+  .prev-month {
+    background: #e7e7e7;
+  }
+
+  .next-month {
+    background: #e7e7e7;
+
+  }
+}
+
+.fs10 {
+  font-size: 10px;
+}
