--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -26,14 +26,14 @@
         </div>
         <div class="mb-3 flex flex-col">
           <%= f.label :spot %>
-          <%= f.text_field :spot, id: "Spot", class: 'w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md' %>
+          <%= f.text_field :spot, id: "spot", class: 'w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md' %>
         </div>
         <div class="mb-3 flex flex-col">
           <%= f.label :address %>
-          <%= f.text_field :address, id: "Address", class: 'w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md' %>
+          <%= f.text_field :address, id: "address", class: 'w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md' %>
         </div>
-          <%= f.hidden_field :latitude, id: "latitude" %>
-          <%= f.hidden_field :longitude, id: "longitude" %>
+        <%= f.hidden_field :latitude, id: "latitude" %>
+        <%= f.hidden_field :longitude, id: "longitude" %>
       </div>
     </div>
     <div class="actions flex justify-center">
@@ -42,4 +42,4 @@
   <% end %>
 </div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&libraries=places&callback=initialize"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&libraries=places&callback=initAutocomplete" async defer></script>
