--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,15 +22,15 @@
         </div>
         <div class="mb-3 flex flex-col">
           <%= f.label :tag_names, class: "text-yellow-950" %>
-          <%= f.text_field :tag_names, value: f.object.tag_names, class: 'w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md', placeholder: '  ,で区切って入力してください' %>
+          <%= f.text_field :tag_names, value: f.object.tag_names, class: "w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 複数登録する場合はカンマ( , )で区切ってください" %>
         </div>
         <div class="mb-3 flex flex-col">
           <%= f.label :spot %>
-          <%= f.text_field :spot, id: "spot", class: 'w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md' %>
+          <%= f.text_field :spot, id: "spot", class: "w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 店名や市町村名を入力すると候補が出てきます" %>
         </div>
         <div class="mb-3 flex flex-col">
           <%= f.label :address %>
-          <%= f.text_field :address, id: "address", class: 'w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md' %>
+          <%= f.text_field :address, id: "address", class: "w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 候補を選択することで住所が自動で入力されます" %>
         </div>
         <%= f.hidden_field :latitude, id: "latitude" %>
         <%= f.hidden_field :longitude, id: "longitude" %>
