--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -14,8 +14,8 @@
     <%= link_to post.title, post_path(post), class: "hover:text-yellow-600" %>
   </div>
   <div class="flex items-end justify-between mt-auto">
-    <div class="flex justify-self-start">
-      <%= render "posts/user_profile_button", { user: post.user } %>
+    <div class="flex justify-self-start text-yellow-600">
+      <%= post.created_at.strftime('%Y/%m/%d') %>
     </div>
     <% if current_user.notown?(post) %>
       <%= render "like_buttons", { post: post } %>
