--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,4 +1,4 @@
-<div class= 'flex flex-col justify-center items-center mt-6 mb-6'>
+<div class= 'flex flex-col justify-center items-center mt-6'>
 
 <%- if controller_name != 'sessions' %>
   <%= link_to "ログインはこちら", new_session_path(resource_name) %><br />
