--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -18,7 +18,8 @@
   <div class= "my-15 text-center text-base text-yellow-900">
     <ul>
       <li>SweetsLog は</li>
-      <li>美味しいスイーツを食べた幸せな記憶を記録、シェアするアプリです。</li>
+      <li>美味しいスイーツを食べた幸せな記憶を記録し</li>
+      <li>シェアできるアプリです。</li>
     </ul>
   </div>
 </div>
@@ -77,6 +78,6 @@
     </div>
   </div>
   <% unless user_signed_in? %>
-    <%= link_to '会員登録（無料） をして使ってみる', new_user_registration_path, class: "my-15 mx-auto block text-base text-center text-white bg-yellow-900 px-5 py-2.5 rounded-xl hover:bg-yellow-700" %>
+    <%= link_to '会員登録（無料）をして使ってみる', new_user_registration_path, class: "my-15 mx-auto block text-base text-center text-white bg-yellow-900 px-5 py-2.5 rounded-xl hover:bg-yellow-700" %>
   <% end %>
 </div>
